corrects z-index of elements to place toolbar options behind the toolbar but above content

--- a/src/stylesheets/toolbar.css
+++ b/src/stylesheets/toolbar.css
@@ -4,6 +4,9 @@ nav{
     justify-content: space-between;
     align-items: center;
 
+    position: relative;
+    z-index: 10;
+
     background-color: var(--color-main-black);
     padding: 1rem;
 }
@@ -21,7 +24,7 @@ h1{
 }
 
 li{
-    font-size: 1.5rem;
+    font-size: 1.5rem;  
 }
 
 h1, li{
